# labSystem

./: .gitignore  CMakeLists.txt  main.cpp
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  laboratory.cpp  laboratory.h
src/include/: Inventory.h  LabTests.h  Patients.h  Products.h
src/models/: Inventory.cpp  LabTests.cpp  Patiens.cpp  Patients.cpp  Products.cpp
